include/mcp/c_api/mcp_c_types_api.h

MCP_API mcp_bool_t mcp_server_capabilities_has_resources(
    mcp_server_capabilities_t caps) MCP_NOEXCEPT;
MCP_API void mcp_server_capabilities_set_resources(
    mcp_server_capabilities_t caps, mcp_bool_t enabled) MCP_NOEXCEPT;
MCP_API mcp_bool_t mcp_server_capabilities_has_logging(
    mcp_server_capabilities_t caps) MCP_NOEXCEPT;
MCP_API void mcp_server_capabilities_set_logging(
    mcp_server_capabilities_t caps, mcp_bool_t enabled) MCP_NOEXCEPT;
/* Initialize Result Functions */
MCP_API mcp_initialize_result_t
mcp_initialize_result_create(const char* protocol_version) MCP_NOEXCEPT;
MCP_API void mcp_initialize_result_free(mcp_initialize_result_t result)
    MCP_NOEXCEPT;
MCP_API const char* mcp_initialize_result_get_protocol_version(
    mcp_initialize_result_t result) MCP_NOEXCEPT;
MCP_API void mcp_initialize_result_set_server_info(
    mcp_initialize_result_t result, mcp_implementation_t info) MCP_NOEXCEPT;
MCP_API mcp_implementation_t mcp_initialize_result_get_server_info(
    mcp_initialize_result_t result) MCP_NOEXCEPT;
MCP_API void mcp_initialize_result_set_capabilities(
    mcp_initialize_result_t result,
    mcp_server_capabilities_t caps) MCP_NOEXCEPT;
MCP_API mcp_server_capabilities_t mcp_initialize_result_get_capabilities(
    mcp_initialize_result_t result) MCP_NOEXCEPT;
/* JSON-RPC Notification Functions */
MCP_API mcp_jsonrpc_notification_t mcp_jsonrpc_notification_create(
    const char* jsonrpc, const char* method) MCP_NOEXCEPT;
MCP_API void mcp_jsonrpc_notification_free(
    mcp_jsonrpc_notification_t notification) MCP_NOEXCEPT;
MCP_API const char* mcp_jsonrpc_notification_get_jsonrpc(
    mcp_jsonrpc_notification_t notification) MCP_NOEXCEPT;
MCP_API const char* mcp_jsonrpc_notification_get_method(
    mcp_jsonrpc_notification_t notification) MCP_NOEXCEPT;
MCP_API void mcp_jsonrpc_notification_set_params(
    mcp_jsonrpc_notification_t notification,
    const char* json_params) MCP_NOEXCEPT;
MCP_API const char* mcp_jsonrpc_notification_get_params(
    mcp_jsonrpc_notification_t notification) MCP_NOEXCEPT;