sdk/csharp/src/Interop/McpTypesApi.cs


        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_server_capabilities_has_resources(IntPtr caps);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_server_capabilities_set_resources(IntPtr caps, mcp_bool_t enabled);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_server_capabilities_has_logging(IntPtr caps);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_server_capabilities_set_logging(IntPtr caps, mcp_bool_t enabled);

        // Initialize Result Functions
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_result_create([MarshalAs(UnmanagedType.LPStr)] string protocol_version);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_initialize_result_free(IntPtr result);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_result_get_protocol_version(IntPtr result);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_initialize_result_set_server_info(IntPtr result, IntPtr info);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_result_get_server_info(IntPtr result);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_initialize_result_set_capabilities(IntPtr result, IntPtr caps);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_initialize_result_get_capabilities(IntPtr result);

        // JSON-RPC Notification Functions
        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_notification_create(
            [MarshalAs(UnmanagedType.LPStr)] string jsonrpc,
            [MarshalAs(UnmanagedType.LPStr)] string method);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_jsonrpc_notification_free(IntPtr notification);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_notification_get_jsonrpc(IntPtr notification);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_notification_get_method(IntPtr notification);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_jsonrpc_notification_set_params(
            IntPtr notification,
            [MarshalAs(UnmanagedType.LPStr)] string json_params);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_jsonrpc_notification_get_params(IntPtr notification);

        /* ============================================================================
         * Helper Methods for String Marshalling
         * ============================================================================ */

        /// <summary>
        /// Helper to convert IntPtr (const char*) to managed string
        /// </summary>
        public static string PtrToString(IntPtr ptr)
        {
            if (ptr == IntPtr.Zero)
                return null;
            return Marshal.PtrToStringAnsi(ptr);
        }

        /// <summary>
        /// Helper to convert IntPtr (const char*) to managed string with UTF-8 support
        /// </summary>
        public static string PtrToStringUtf8(IntPtr ptr)
        {
            if (ptr == IntPtr.Zero)
                return null;
            return Marshal.PtrToStringUTF8(ptr);
        }
    }
}